@@ -1,3 +1,8 @@
+2014-01-27  TANAKA Takuji  <KXD02663@nifty.ne.jp>
+
+	* dvips.c: Revise procedure of reading command line arguments.
+	(Windows only)
+
 2014-01-13  TANAKA Takuji  <KXD02663@nifty.ne.jp>
 
 	* dvips.c, resident.c: Allow multibyte string with 0x5c
